The Samba-Bugzilla – Bug 10808
Job missing when the queue is paused
Last modified: 2015-02-16 20:01:46 UTC
There is something wrong with samba printqueues since 4.0 When pause printerqueue an submit a printjob on this queue the following occurs: - the printjob appears in the queue. - select the printerjob->properties * This is not possible a windowsalert ( error 0x00000057 ) appears. - after some seconds the job is not longer present in job list. - the job is not printed and still visible in CUPS-printqueue A network trace and logs captured. This disfunction occurs on the samba from ubuntu 14.04 and from sernet.
Created attachment 10278 [details] compressed network capture
Created attachment 10279 [details] compressed log.smbd part 1
Created attachment 10280 [details] compressed log.smbd part 2
The queue I worked on was HpUniveralsPS
I tried this function with the lastest samba 4.1.14 from sernet and the problem persists.
Today I tried this function with the lastest samba 4.1.16 from sernet and the problem persists.
Created attachment 10665 [details] simple smbtorture reproducer - don't commit
There appears to be a CUPS regression in the handling of IPP_GET_JOBS requests. The CUPS IPP_GET_JOBS requested-attributes array indicates which job attributes the caller would like in the cupsd response. Until now, Samba has packed these attributes with a IPP_TAG_NAME format tag. In recent versions of CUPS, this results in the IPP_GET_JOBS response only including the job-id and job-printer-uri fields, even with JobPrivateValues=none configured. Using the IPP_TAG_KEYWORD format tag ensures that all requested fields are present in the IPP_GET_JOBS response. I've raised the issue with a local CUPS developer.
Created attachment 10696 [details] Samba patch to use IPP_TAG_KEYWORD instead of IPP_TAG_NAME for IPP_GET_JOBS requested-attributes In addition to this change, users should also be aware of the new CUPS JobPrivateAccess/JobPrivateValues behaviour. cupsd.conf should be configured with "JobPrivateValues" set to "none" for now. Samba doesn't always provide a "requesting-user-name" attribute in CUPS requests, and CUPS filters attributes in the IPP_GET_JOBS response unless it comes from a "JobPrivateAccess" member, or "JobPrivateValues" is "none".
Created attachment 10710 [details] fix for v4-2-test branch
Created attachment 10711 [details] fix for v4-1-test branch, cherry picked from master
Created attachment 10712 [details] fix for v4-0-test branch, cherry picked from mast0r
Comment on attachment 10710 [details] fix for v4-2-test branch LGTM.
Comment on attachment 10711 [details] fix for v4-1-test branch, cherry picked from master LGTM.
Comment on attachment 10712 [details] fix for v4-0-test branch, cherry picked from mast0r LGTM (edited title to specify 4.0, not 4.1 branch :-).
Re-assigning to Karolin for inclusion in 4.2.0, 4.1.next, 4.0.next.
(In reply to Jeremy Allison from comment #16) Pushed to autobuild-v4-[0|1|2]-test.
Pushed to all branches, Closing out bug report. Thanks!