source3/printing/print_cups.c
@@ -1155,7 +1155,7 @@ static int cups_queue_get(const char *sharename,
 	ippAddString(request, IPP_TAG_OPERATION, IPP_TAG_LANGUAGE,
                      "attributes-natural-language", NULL, language->language);
 
-        ippAddStrings(request, IPP_TAG_OPERATION, IPP_TAG_NAME,
+        ippAddStrings(request, IPP_TAG_OPERATION, IPP_TAG_KEYWORD,
 	              "requested-attributes",
 		      (sizeof(jattrs) / sizeof(jattrs[0])),
 		      NULL, jattrs);
